boom/measurements/verilator-mega-O3/compile-time-run-0.txt
START: Current timestamp in milliseconds: 1731323131508
GROUP: verilator SUBGROUP: firtool COMMAND: firtool --lowering-options=disallowLocalVariables /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-run-0//boom.fir -o /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-run-0//boom.sv
/home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-run-0//boom.fir:1:16: error: FIRRTL version must be >=2.0.0
FIRRTL version 1.1.0
               ^

 Performance counter stats for '/usr/local/bin/firtool --lowering-options=disallowLocalVariables,mitigateVivadoArrayIndexConstPropBug /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-run-0//boom.fir -o /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-run-0//boom.sv':

             30.26 msec task-clock:u                     #    0.988 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             2,893      page-faults:u                    #   95.612 K/sec                     
        34,602,679      cycles:u                         #    1.144 GHz                         (10.76%)
         8,501,123      stalled-cycles-frontend:u        #   24.57% frontend cycles idle        (19.68%)
       225,060,727      instructions:u                   #    6.50  insn per cycle            
                                                  #    0.04  stalled cycles per insn     (29.59%)
        42,042,344      branches:u                       #    1.389 G/sec                       (39.45%)
           693,910      branch-misses:u                  #    1.65% of all branches             (49.37%)
        98,397,021      L1-dcache-loads:u                #    3.252 G/sec                       (49.55%)
         5,108,626      L1-dcache-load-misses:u          #    5.19% of all L1-dcache accesses   (49.52%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
         1,133,359      L1-icache-loads:u                #   37.457 M/sec                       (49.52%)
             6,011      L1-icache-load-misses:u          #    0.53% of all L1-icache accesses   (49.61%)
            60,233      dTLB-loads:u                     #    1.991 M/sec                       (49.60%)
            28,830      dTLB-load-misses:u               #   47.86% of all dTLB cache accesses  (40.72%)
               470      iTLB-loads:u                     #   15.533 K/sec                       (30.80%)
             1,881      iTLB-load-misses:u               #  400.21% of all iTLB cache accesses  (20.89%)
           517,249      L1-dcache-prefetches:u           #   17.095 M/sec                       (10.94%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.030638330 seconds time elapsed

       0.020377000 seconds user
       0.010179000 seconds sys


GROUP: verilator SUBGROUP: verilator
%Error: Cannot find file containing module: '/home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-0/boom.sv'
%Error: This may be because there's no search path specified with -I<dir>.
        ... Looked in:
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-0/boom.sv
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-0/boom.sv.v
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-0/boom.sv.sv
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-0/boom-vtor//home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-0/boom.sv
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-0/boom-vtor//home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-0/boom.sv.v
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-0/boom-vtor//home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-0/boom.sv.sv
%Error: Exiting due to 2 error(s)

 Performance counter stats for '/usr/bin/verilator -O3 --noassert --x-assign fast --x-initial fast --threads 1 -sv -cc -Mdir /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-run-0//boom-vtor /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-run-0//boom.sv /home/bea/Research/paper-evals/arc-tests/boom/../verilator-stubs.sv -j 0 -DPRINTF_COND=0 -DASSERT_VERBOSE_COND=0 -DSTOP_COND=0 -Wno-WIDTH':

             68.83 msec task-clock:u                     #    1.729 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             4,242      page-faults:u                    #   61.627 K/sec                     
       165,618,735      cycles:u                         #    2.406 GHz                         (60.81%)
        13,546,530      stalled-cycles-frontend:u        #    8.18% frontend cycles idle        (58.35%)
        97,507,610      instructions:u                   #    0.59  insn per cycle            
                                                  #    0.14  stalled cycles per insn     (61.90%)
        27,163,448      branches:u                       #  394.623 M/sec                       (50.57%)
         3,540,583      branch-misses:u                  #   13.03% of all branches             (19.12%)
        99,967,750      L1-dcache-loads:u                #    1.452 G/sec                       (47.46%)
         2,203,106      L1-dcache-load-misses:u          #    2.20% of all L1-dcache accesses   (47.49%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
        26,582,350      L1-icache-loads:u                #  386.181 M/sec                       (47.49%)
           434,131      L1-icache-load-misses:u          #    1.63% of all L1-icache accesses   (47.49%)
           525,445      dTLB-loads:u                     #    7.634 M/sec                       (47.53%)
            18,805      dTLB-load-misses:u               #    3.58% of all dTLB cache accesses  (50.85%)
           753,819      iTLB-loads:u                     #   10.951 M/sec                       (45.62%)
            12,423      iTLB-load-misses:u               #    1.65% of all iTLB cache accesses  (52.12%)
           726,600      L1-dcache-prefetches:u           #   10.556 M/sec                       (64.75%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.039810563 seconds time elapsed

       0.033908000 seconds user
       0.033764000 seconds sys


GROUP: verilator SUBGROUP: clang
